--- a/data/courses_config.json
+++ b/data/courses_config.json
@@ -164,6 +164,13 @@
     "title": "⚛️ Physique Quantique — Fondamentaux",
     "modules": [
       {
+        "id": "1_0_duality",
+        "title": "1.0 Dualité Onde-Corpuscule",
+        "icon": "🌊",
+        "interactive": true,
+        "initFunction": "initDualSlit"
+      },
+      {
         "id": "1_1_postulats",
         "title": "1.1 Postulats & États",
         "icon": "⚛️",
